--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -101,7 +101,13 @@
     </div>
 
 
+        <div class="navbar-static-bottom text-center" id="footer">
+            <span class="glyphicon glyphicon-copyright-mark"></span>
+            <small>2015, Johannes Reiners</small>
+        </div>
     </div> <!-- /container -->
+
+
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
