--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 
     <!-- Fixed navbar -->
-    <nav class="navbar navbar-default navbar-static-top">
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -24,7 +24,7 @@
     </nav>
 
     <div class="container" role="main">
-
+<br/>
     <div class="page-header">
         <h2>Günther der Treckerfahrer <br/><small>Updated: 22. Dezember 2014</small></h2>
     </div>
